# stdiolink

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  GEMINI.md  README.md  README_zh.md  build.bat  build.sh  build_ninja.bat  build_vs.bat  compile_commands.json  publish.bat  run_code_check.bat  run_code_check.sh  tidy_check.bat  vcpkg.json
src/demo/: CMakeLists.txt  README.md
src/demo/calculator_driver/: CMakeLists.txt  main.cpp
src/demo/config_demo/: CMakeLists.txt  README.md
src/demo/demo_host/: CMakeLists.txt  main.cpp
src/demo/device_simulator_driver/: CMakeLists.txt  main.cpp
src/demo/echo_driver/: CMakeLists.txt  README.md  main.cpp
src/demo/file_processor_driver/: CMakeLists.txt  main.cpp
src/demo/heartbeat_driver/: CMakeLists.txt  main.cpp
src/demo/host_demo/: CMakeLists.txt  README.md  main.cpp
src/demo/js_runtime_demo/: CMakeLists.txt  README.md
src/demo/kv_store_driver/: CMakeLists.txt  main.cpp
src/demo/meta_driver/: CMakeLists.txt  main.cpp
src/demo/meta_host_demo/: CMakeLists.txt  main.cpp
src/demo/multiscan_driver/: CMakeLists.txt  main.cpp  multiscan_driver.cpp  multiscan_driver.h
src/demo/progress_driver/: CMakeLists.txt  README.md  main.cpp
src/demo/server_manager_demo/: CMakeLists.txt  README.md
src/driverlab/: CMakeLists.txt  main.cpp
src/driverlab/models/: command_history.cpp  command_history.h  driver_session.cpp  driver_session.h
src/driverlab/resources/: driverlab.qrc
src/driverlab/ui/: command_list.cpp  command_list.h  doc_viewer.cpp  doc_viewer.h  driver_explorer.cpp  driver_explorer.h  driver_test_page.cpp  driver_test_page.h  mainwindow.cpp  mainwindow.h  parameter_form.cpp  parameter_form.h  result_panel.cpp  result_panel.h
src/drivers/: CMakeLists.txt  opcua_common.cpp  opcua_common.h
src/drivers/driver_3d_laser_radar/: CMakeLists.txt  handler.cpp  handler.h  laser_session.cpp  laser_session.h  laser_transport.cpp  laser_transport.h  main.cpp  protocol_codec.cpp  protocol_codec.h
src/drivers/driver_3d_scan_robot/: CMakeLists.txt  handler.cpp  handler.h  main.cpp  protocol_codec.cpp  protocol_codec.h  radar_session.cpp  radar_session.h  radar_transport.cpp  radar_transport.h
src/drivers/driver_3d_temp_scanner/: CMakeLists.txt  handler.cpp  handler.h  main.cpp  protocol_codec.cpp  protocol_codec.h  thermal_session.cpp  thermal_session.h  thermal_transport.cpp  thermal_transport.h
src/drivers/driver_3dvision/: CMakeLists.txt  http_client.cpp  http_client.h  main.cpp  websocket_client.cpp  websocket_client.h
src/drivers/driver_limaco_1_radar/: CMakeLists.txt  handler.cpp  handler.h  main.cpp
src/drivers/driver_limaco_5_radar/: CMakeLists.txt  handler.cpp  handler.h  main.cpp
src/drivers/driver_limaco_common/: limaco_decode.cpp  limaco_decode.h  limaco_transport.cpp  limaco_transport.h
src/drivers/driver_modbusrtu/: CMakeLists.txt  main.cpp  modbus_rtu_client.cpp  modbus_rtu_client.h  modbus_types.cpp  modbus_types.h
src/drivers/driver_modbusrtu_serial/: CMakeLists.txt  handler.cpp  handler.h  main.cpp  modbus_rtu_serial_client.cpp  modbus_rtu_serial_client.h
src/drivers/driver_modbusrtu_serial_server/: CMakeLists.txt  handler.cpp  handler.h  main.cpp  modbus_rtu_serial_server.cpp  modbus_rtu_serial_server.h
src/drivers/driver_modbusrtu_server/: CMakeLists.txt  handler.cpp  handler.h  main.cpp  modbus_rtu_server.cpp  modbus_rtu_server.h
src/drivers/driver_modbustcp/: .gitignore  CMakeLists.txt  README.md  main.cpp  modbus_client.cpp  modbus_client.h
src/drivers/driver_modbustcp_server/: CMakeLists.txt  handler.cpp  handler.h  main.cpp  modbus_tcp_server.cpp  modbus_tcp_server.h
src/drivers/driver_opcua/: CMakeLists.txt  handler.cpp  handler.h  main.cpp
src/drivers/driver_opcua_server/: CMakeLists.txt  handler.cpp  handler.h  main.cpp  opcua_server_runtime.cpp  opcua_server_runtime.h
src/drivers/driver_plc_crane/: CMakeLists.txt  handler.cpp  handler.h  main.cpp
src/drivers/driver_plc_crane_sim/: CMakeLists.txt  README.md  handler.cpp  handler.h  main.cpp  sim_device.cpp  sim_device.h
src/drivers/driver_pqw_analog_output/: CMakeLists.txt  handler.cpp  handler.h  main.cpp
src/smoke_tests/: CMakeLists.txt  README.md  m100_cli_docs_and_migration.py  m101_bin_scan_orchestrator.py  m101a_service_driver_timeout.py  m102_webui_i18n_alignment.py  m103_3d_scan_robot.py  m104_exec_runner.py  m105_pqw_analog_output.py  m106_3d_temp_scanner.py  m107_opcua_server.py  m108_3d_laser_radar.py  m94_server_run_oneshot_smoke.py  m95_driver_examples.py  m96_3dvision_ws.py  m97_plc_crane_sim_smoke.py  m98_json_cli_normalization.py  m99_cli_example_unification.py  run_smoke.py
src/stdiolink/: CMakeLists.txt  README.md  stdiolink_export.h  test_driver_main.cpp
src/stdiolink/console/: cli_schema_parser.cpp  cli_schema_parser.h  console_args.cpp  console_args.h  console_responder.cpp  json_cli_codec.h  (+4 more)
src/stdiolink_server/: CMakeLists.txt  main.cpp  server_manager.cpp  server_manager.h
src/stdiolink_service/: CMakeLists.txt  main.cpp
src/tests/: CMakeLists.txt  README.md  runtime_layout_guard.cpp  runtime_layout_guard.h  test_3d_laser_radar.cpp  test_3d_scan_robot.cpp  test_3d_temp_scanner.cpp  test_3dvision_websocket.cpp  test_advanced_ui.cpp  test_api_router.cpp  test_bin_scan_orchestrator_service.cpp  test_cli_schema_parser.cpp  test_config_inject.cpp  test_console.cpp  test_console_meta_driver_main.cpp  test_constants_binding.cpp  test_cors_middleware.cpp  test_doc_generator.cpp  test_driver_catalog.cpp  test_driver_core.cpp  test_driver_core_async.cpp  test_driver_core_console_stub.cpp  test_driver_main.cpp  test_driver_manager_scanner.cpp  test_driver_registry.cpp  test_driver_resolve.cpp  test_driver_task_binding.cpp  test_driverlab_ws_handler.cpp  test_es_module_loader.cpp  test_event_bus.cpp  test_event_log.cpp  test_example_auto_fill.cpp  test_exec_runner_service.cpp  test_fs_binding.cpp  test_guard_stub_main.cpp  test_host_driver.cpp  test_http_binding.cpp  test_instance_log_writer.cpp  test_instance_manager.cpp  test_js_engine_scaffold.cpp  (+66 more)
(+984 files in other folders)
