# Demo 程序 CMakeLists.txt

add_subdirectory(calculator_driver)
add_subdirectory(file_processor_driver)
add_subdirectory(device_simulator_driver)
add_subdirectory(heartbeat_driver)
add_subdirectory(kv_store_driver)
add_subdirectory(demo_host)
add_subdirectory(js_runtime_demo)
add_subdirectory(config_demo)
add_subdirectory(server_manager_demo)
