# drivers 目录 CMakeLists.txt

add_subdirectory(driver_3dvision)
add_subdirectory(driver_limaco_1_radar)
add_subdirectory(driver_limaco_5_radar)
add_subdirectory(driver_modbustcp)
add_subdirectory(driver_modbusrtu)
add_subdirectory(driver_modbustcp_server)
add_subdirectory(driver_modbusrtu_server)
add_subdirectory(driver_modbusrtu_serial_server)
add_subdirectory(driver_modbusrtu_serial)
add_subdirectory(driver_plc_crane)
add_subdirectory(driver_plc_crane_sim)
add_subdirectory(driver_3d_scan_robot)
